--- a/site/test.haml
+++ b/site/test.haml
@@ -54,7 +54,7 @@ title: Your new Proton site
       %article
         .hover
         .code
-          %h3 Zero durations with non-zeros
+          %h3 Zero durations with non-zeros - fails in WebKit
           %pre
             != "$('.box')."
             %br<>
