--- a/site/index.haml
+++ b/site/index.haml
@@ -7,6 +7,10 @@ title: Hello
     %link(rel='stylesheet' media='screen' type='text/css' href='style.css')
     %meta(name='description' content='Super-smooth CSS3 transformations and transitions for jQuery.')
     != "<!--[if lt IE 9]><script src='//html5shiv.googlecode.com/svn/trunk/html5.js'></script><![endif]-->"
+    != "<link href='http://fonts.googleapis.com/css?family=Marvel:400' rel='stylesheet' type='text/css'>"
+    != "<link href='http://fonts.googleapis.com/css?family=Oswald:400' rel='stylesheet' type='text/css'>"
+    != "<link href='http://fonts.googleapis.com/css?family=Ubuntu+Mono' rel='stylesheet' type='text/css'>"
+    != "<link href='http://fonts.googleapis.com/css?family=Signika:300' rel='stylesheet' type='text/css'>"
     %script(src='http://ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js')
     %script(src='jquery.transit.min.js')
     %script(src='script.js')
