--- a/site/style.sass
+++ b/site/style.sass
@@ -2,33 +2,41 @@
 @import 'compass/utilities'
 @import 'compass/reset'
 
-$liteslate: #7bd
+// Headings
+$h3:    #7bd * 0.8
+
+// Highlights for type
+$pip:   #7bd * 0.8
+
 $slate: #7bd
-$box:   #7bd
+$box:   #7bd * 0.7
 $bg:    #fafafa
 $yellow: #fafae0
 
 html, body
   -webkit-backface-visibility: hidden
 
+body
+  overflow-x: hidden
+
 body, td, label
-  font-family: 'helvetica neue', helvetica, arial, sans-serif
-  font-weight: 200
+  font-family: signika, 'helvetica neue', helvetica, arial, sans-serif
+  font-weight: 300
   font-size: 12pt
 
 body
   line-height: 1.5
   color: #555
-  background: $bg
+  background: $bg url(images/bg.png)
   text-shadow: 1px 1px 0 rgba(white, 0.4)
 
 #all
-  width: 800px
   margin: 0 auto
 
 em
   font-style: italic
-  color: #aaa
+  font-family: 'ubuntu mono', sans-serif
+  color: #777
 
 // Code
 pre, code
@@ -36,7 +44,7 @@ pre, code
 
 code
   font-size: 0.9em
-  color: $slate
+  color: #777
   padding: 0 6px
   +border-radius(2px)
   background: rgba(white, 0.3)
@@ -52,10 +60,11 @@ pre
     color: #808090
 
   b
-    color: #389
+    color: #333
     background: $yellow
     padding: 2px 3px
     +border-radius(2px)
+    +box-shadow(1px 1px 1px rgba(black, 0.1))
 
 //
 // Header
@@ -64,29 +73,49 @@ pre
   &
     text-align: center
     line-height: 1.3
-    padding: 40px 0
+    padding: 80px 0 40px 0
 
   h1
-    font-size: 33pt
-    font-weight: 100
+    color: #333
+    font-size: 57pt
+    font-family: oswald, sans-serif
+    text-transform: uppercase
+    letter-spacing: 4px
+    font-weight: 400
+    text-shadow: 1px 1px 0 $bg, 3px 3px 0 rgba($pip, 0.5), 0 0 1px $bg
+
+    border-top: solid 2px #888
+    border-bottom: solid 2px #888
+    padding: 0 0 5px 0
+    width: 305px
+    margin: 0 auto 20px auto
+
+  h1, p
+    +transform(skewY(-5deg))
 
   p
-    font-size: 14pt
-    font-weight: 800
+    width: 350px
+    margin: 0 auto 20px auto
+
+    font-size: 18pt
+    font-family: marvel
+    font-weight: 400
     padding: 0 200px
-    color: $slate
+    color: #666
+    text-shadow: 2px 2px 0 $bg, 3px 3px 0 #ddd, 0 0 1px $bg
 
 //
 // Each thingie
 //
 article
   +pie-clearfix
-  margin: 40px 0
+  margin: 40px auto
+  width: 800px
   padding-top: 10px
   position: relative
 
   &.mini
-    margin: 0 0
+    margin: 0 auto
 
   *:not(.mini) + &.mini
     margin-top: 40px
@@ -106,7 +135,10 @@ article
   h3
     font-weight: 800
     font-size: 12pt
-    color: $liteslate
+    color: $h3
+
+    font-family: 'ubuntu mono', sans-serif
+    text-shadow: 1px 1px 1px rgba(white, 0.5)
 
   .code
     float: right
@@ -123,14 +155,19 @@ article
     width: 50%
     height: 100px
 
-    background: #f3f3f3
-    border: solid 1px #eee
     +box-sizing(border-box)
-    +border-radius(2px)
+
+    // background: #f3f3f3
+    // border: solid 3px #eee
+    // +box-shadow(inset 1px 1px 0 rgba(black, 0.1), 1px 1px rgba(black, 0.1))
+
+    border: dashed 1px #aaa
+    +border-radius(4px)
+    background: rgba(black, 0.05)
+    +box-shadow(1px 1px 0 rgba(white, 0.5))
 
   &.highlight .field
-    background: #e8f0f0 * 1.03
-    border: solid 1px rgba($slate, 0.4)
+    background: rgba(#333, 0.2)
 
   .box, .ghost
     width: 50px
@@ -138,35 +175,53 @@ article
     +box-sizing(border-box)
     display: block
     position: absolute
-    +border-radius(2px)
     background: $box
-    +box-shadow(inset 1px 1px 0 rgba(white, 0.3))
+    background: url(images/box.png)
     border: solid 1px $box
 
   .ghost
     background: #e0fafa * 1.2
     opacity: 0.4
     border: 0
-    +box-shadow(inset 0 0 1px #7bd, inset 2px 2px 3px rgba(#7bd*0.4, 0.2))
+    +box-shadow(inset 0 0 1px $box, inset 2px 2px 3px rgba($box*0.4, 0.2))
 
+// Headings ("how to use")
 h2
   text-align: center
-  font-size: 1.1em
+  font-size: 1.9em
   padding: 5px 0
   +border-radius(2px)
-  margin-bottom: -10px
   border-bottom: solid 1px rgba($slate, 0.1)
-  background: mix($slate, $bg, 20%)
   line-height: 20pt
 
-  font-weight: 800
+  font-weight: 400
+  font-family: 'ubuntu mono', sans-serif
+  text-transform: uppercase
+  letter-spacing: 1px
+
+  color: $pip
+  text-shadow: 1px 1px 0 $bg, 2px 2px 0 rgba(#888, 0.5)
+
+  border-bottom: 0
+
+  margin-bottom: 10px
+
+  &:before
+    content: ''
+    display: block
+    border-top: dashed 1px #aaa
+    border-bottom: dashed 1px #aaa
+    background: rgba(black, 0.1)
+    +box-shadow(0 -2px 0 rgba(white, 0.4), 0 2px 0 rgba(white, 0.4))
+    height: 3px
+    margin-bottom: 40px
 
 h2 + .info
-  margin-top: 10px
-  background: mix($slate, $bg, 8%)
   padding: 10px 50px
   text-align: center
-  margin-bottom: -10px
+
+  width: 800px
+  margin: 0 auto -10px auto
 
 button, a.button
   text-decoration: none
@@ -210,17 +265,24 @@ button, a.button
   padding: 10px 0 50px 0
   text-align: center
 
+  // Download button
   a.button
+    font-family: 'ubuntu mono', sans-serif
+    text-transform: uppercase
+
     margin: 0 10px
-    background: #333
+    background: #222
     font-weight: 200
-    padding: 0 50px
     text-align: center
-    height: 30px
-    line-height: 30px
+    height: 36px
+    line-height: 36px
+    +border-radius(1px)
+
+    +box-shadow(2px 2px 0 $bg, 6px 6px 0 rgba($pip, 0.3))
+
 
     &:hover
-      background: #555
+      background: $pip
 
     &:before
       display: none
@@ -264,10 +326,14 @@ button, a.button
   pre
     color: #888
     padding: 10px
-    background: #e8eaea
-    +box-shadow(1px 1px 0 rgba(black, 0.1))
-    +border-radius(2px)
-    margin: 20px 150px 0 150px
+    width: 600px
+
+    border: dashed 1px #aaa
+    +border-radius(4px)
+    background: rgba(black, 0.05)
+    +box-shadow(1px 1px 0 rgba(white, 0.5))
+
+    margin: 20px auto 0 auto
     text-align: left
 
 .info
@@ -281,6 +347,9 @@ button, a.button
 
 .credits
   padding: 30px 0 100px 0
+  width: 800px
+  margin: 0 auto
+
   font-size: 0.8em
   overflow: hidden
 
