--- a/site/s2/style.css
+++ b/site/s2/style.css
@@ -1,5 +1,5 @@
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed,  figure, figcaption, footer, header, hgroup,  menu, nav, output, ruby, section, summary, time, mark, audio, video { margin: 0; padding: 0; border: 0; font-size: 100%; font: inherit; vertical-align: baseline; }
-article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section { display: block; }
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed,  figure, figcaption, footer, header, hgroup,  menu, nav, output, ruby, main-notes, summary, time, mark, audio, video { margin: 0; padding: 0; border: 0; font-size: 100%; font: inherit; vertical-align: baseline; }
+article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, main-notes { display: block; }
 body { line-height: 1; }
 ol, ul { list-style: none; }
 blockquote, q { quotes: none; }
@@ -18,13 +18,16 @@ table { border-collapse: collapse; border-spacing: 0; }
 
 /* ---------------------------------------------------------------------------- */
 
+pre {
+  white-space: pre-wrap; }
+
 body, input, textarea, td {
   line-height: 1.5;
   font-family: Open Sans, sans-serif;
+  color: #405060;
   font-size: 1em; }
 
 body {
-  padding-bottom: 40px;
   font-size: 10pt; }
 
 html {
@@ -37,18 +40,12 @@ html {
   /* background: #444 url(bg.jpg) 0 0 no-repeat fixed; */
   /* background-size: 250% auto; */
   color: #444;
-  padding: 0 20px;
 
   box-shadow: inset 0 1px rgba(250, 250, 250, 0.4); }
 
-
-@media (max-width: 600px) {
-  html {
-    padding: 0 10px; } }
-
-.all {
+.card {
   background: white;
-  box-shadow: 1px 1px 0 rgba(0, 0, 0, 0.1), -1px 1px 0 rgba(0, 0, 0, 0.1), 0 0 0 4px rgba(0, 0, 0, 0.0), 0 2px 0 rgba(0, 0, 0, 0.1), 0 0 0 4px rgba(0, 0, 0, 0.1);
+  box-shadow: 1px 1px 0 rgba(0, 0, 0, 0.1), -1px 1px 0 rgba(0, 0, 0, 0.1), 0 0 0 4px rgba(0, 0, 0, 0.0), 0 2px 0 rgba(0, 0, 0, 0.1);
   border-radius: 2px;
 
   margin: 20px auto;
@@ -145,18 +142,84 @@ a {
   text-shadow: 1px 1px 0 white, 2px 2px 0 rgba(30, 120, 200, 0.15); }
 
 .header p {
+  max-width: 350px;
+  margin: 0 auto;
   font-weight: 400;
-  color: #aaa;
+  color: #5ad;
   font-style: italic;
-  font-size: 12pt; }
+  font-size: 15pt; }
 
 /* ---------------------------------------------------------------------------- */
 
-.section { 
+.subcontent {
+  padding: 0; }
+
+.subcontent .code,
+.subcontent .info {
+  padding: 40px 80px; }
+
+.subcontent .code {
+  padding-top: 20px;
+  padding-bottom: 20px;
+
+  color: #555;
+  text-shadow: 0 1px 0 rgba(250, 250, 250, 0.6);
+
+  border-top: solid 1px #e7e7e7;
+  border-bottom: solid 1px #e7e7e7;
+  background: #eee; }
+
+.subcontent .code pre {
+  font-size: 1.1em;
+  font-family: monaco, menlo, sans-serif;
+  line-height: 1.6; }
+
+.subcontent .code:first-child {
+  border-top: 0;
+  border-top-left-radius: 2px;
+  border-top-right-radius: 2px; }
+
+.subcontent .code:last-child {
+  /* +subtleinset */
+  box-shadow: inset 0 5px 3px -3px rgba(0, 0, 0, 0.07);
+  border-top: solid 1px #ccc;
+
+  border-bottom: 0;
+  border-bottom-left-radius: 2px;
+  border-bottom-right-radius: 2px; }
+
+.subcontent h3 {
+  font-family: exo, sans-serif;
+  font-size: 1.7em;
+  font-weight: bold; }
+
+.subcontent code {
+  background: #fafae0;
+  font-size: 0.9em;
+  padding: 1px 3px;
+  box-shadow: 1px 1px rgba(0, 0, 0, 0.1);
+  border-radius: 2px; }
+
+/* Responsiveness */
+@media (min-width: 600px) {
+  .subcontent {
+    line-height: 1.7; }
+  .subcontent p {
+    padding-right: 200px; } }
+
+@media (max-width: 600px) {
+  .subcontent .code,
+  .subcontent .info {
+    padding-left: 20px;
+    padding-right: 20px; } }
+
+/* ---------------------------------------------------------------------------- */
+
+.main-notes { 
   overflow: hidden;
   padding: 0px 120px; }
 
-.section p {
+.main-notes p {
   float: left;
   width: 50%;
 
@@ -165,7 +228,7 @@ a {
 
   margin: 20px 0; }
 
-.section p strong {
+.main-notes p strong {
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
 
@@ -176,12 +239,94 @@ a {
   font-weight: bold; }
 
 @media (max-width: 600px) {
-  .section {
+  .main-notes {
     padding: 0px 20px; }
 
-  .section p {
+  .main-notes p {
     width: auto;
     float: none; } }
+
+/* ---------------------------------------------------------------------------- */
+
+.section {
+  box-shadow: inset 0 1px rgba(0, 0, 0, 0.1);
+  background-attachment: fixed, fixed;
+  overflow: hidden;
+  padding: 60px 20px;
+  padding-top: 0; }
+
+@media (max-width: 600px) {
+  .section {
+    padding-left: 10px;
+    padding-right: 10px; } }
+
+.section.top {
+  box-shadow: 0;
+  padding-top: 0; }
+
+/* ---------------------------------------------------------------------------- */
+
+.section.usage {
+  background:
+    linear-gradient(top left, rgba(0, 0, 50, 0.5), rgba(0, 0, 50, 0.5) 80%),
+    url(http://subtlepatterns.subtlepatterns.netdna-cdn.com/patterns/noisy_grid.png);
+  background-attachment: fixed, fixed;
+
+  box-shadow: inset 0 5px 3px -3px rgba(0, 0, 0, 0.3);
+
+  border-top: solid 1px #aaa;
+  border-bottom: solid 1px #aaa;
+  padding-top: 40px;
+  padding-bottom: 20px; }
+
+.section.usage .heading {
+  margin: 0 auto;
+  margin-bottom: 40px; }
+
+.section.usage .heading h2 {
+  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.2);
+  margin: 0;
+  color: white; }
+
+.transformations-list li {
+  padding: 5px 0;
+  display: inline-block;
+  width: 22%; }
+
+.transformations-list strong {
+  font-weight: bold; }
+
+.transformations-list small {
+  font-size: .9em; }
+
+@media (max-width: 600px) {
+  .section.usage .heading {
+    margin-bottom: 20px; }
+
+  .section.usage {
+    padding: 20px 20px; }
+
+  .section.usage .card {
+    margin-bottom: 0; }
+
+  .transformations-list li {
+    width: 45%; } }
+
+.section.more {
+    /* linear-gradient(top left, rgba(220, 110, 10, 0.2), rgba(0, 170, 255, 0.1) 80%), */
+  background:
+    linear-gradient(top left, rgba(255, 90, 200, 0.1), rgba(0, 170, 255, 0.07)),
+    linear-gradient(top, rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.1)),
+    url(http://subtlepatterns.subtlepatterns.netdna-cdn.com/patterns/shattered.png);
+  background-attachment: fixed, fixed;
+}
+
+/* ---------------------------------------------------------------------------- */
+
+.section.easing {
+  background:
+    linear-gradient(top left, rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.6)),
+    url(http://subtlepatterns.subtlepatterns.netdna-cdn.com/patterns/shattered.png); }
 
 /* ---------------------------------------------------------------------------- */
 
@@ -198,7 +343,10 @@ a {
   border-radius: 65px;
 
   position: relative;
-  z-index: 1; }
+  z-index: 1;
+
+  transition: all 100ms ease;
+  transform: scale(1.0) translate3d(0, 0, 0); }
 
 .download a .in {
   display: table-cell;
@@ -210,6 +358,8 @@ a {
   height: 120px;
   border-radius: 61px;
 
+  text-shadow: 0 0 1px rgba(0, 0, 0, 0.4);
+
   line-height: 1.4;
 
   text-align: center; }
@@ -220,33 +370,32 @@ a {
   padding: 0 10px; }
 
 .download a strong {
-  color: #333;
   font-family: exo, sans-serif;
   font-weight: bold;
   font-size: 1.6em; }
 
 .download a small {
   text-transform: uppercase;
-  font-size: 0.9em;
-  color: #999; }
+  font-size: 0.9em; }
 
-/* Hover state */
+/* Non-hover */
 .download a .in {
-  background: #222;
+  transition: all 150ms linear;
+  background: #5ad;
   color: white; }
 
 .download a strong {
   color: white; }
 
 .download a small {
-  color: #888; }
+  color: #eee; }
 
 /* Hover */
-.download a:hover .in {
-  background: #5ad; }
+.download a:hover {
+  transform: scale(1.08); }
 
-.download a:hover small {
-  color: white; }
+.download a:hover .in {
+  background: #222; }
 
 /* ---------------------------------------------------------------------------- */
 
@@ -308,6 +457,8 @@ a {
   padding: 0 0 10px 0; }
 
 @media (min-width: 600px) {
+  .example:last-child:nth-child(3n+1) {
+    width: 100%; padding-right: 10px; }
   .example:last-child:nth-child(3n+2) {
     width: 66%; }
 }
@@ -344,9 +495,10 @@ a {
   padding: 20px 20px 0 20px;
   margin-bottom: -20px;
 
-  font-style: italic;
+  text-align: right;
+
   color: #507080;
-  font-weight: normal; }
+  font-weight: bold; }
 
 .example .area {
   position: relative;
@@ -355,6 +507,9 @@ a {
 @media (max-width: 600px) {
   .example .area {
     height: 100px; } }
+
+.example.slim .area {
+  height: 80px; }
 
 .example .box,
 .example .ghost {
@@ -378,18 +533,35 @@ a {
   background: #e5eeee;
   box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.2), inset 0 0 0 1px rgba(0, 0, 0, 0.05); }
 
+.example.start-from-left .box,
+.example.start-from-left .ghost {
+  left: 40px; }
+
 .example .code {
+  /* +subtleinset */
+  box-shadow: inset 0 5px 3px -3px rgba(0, 0, 0, 0.07);
   background: #eee;
+
   padding: 20px;
-  border-top: solid 1px #ddd;
+  border-top: solid 1px #ccc;
 
   border-bottom-left-radius: 2px;
   border-bottom-right-radius: 2px; }
+
+.example .code h4 {
+  font-weight: bold; }
+
+.example.white .code {
+  background: transparent;
+  border-top: 0;
+  padding-top: 0;
+  box-shadow: none; }
 
 .example pre {
   text-shadow: 1px 1px 0 rgba(250, 250, 250, 0.9);
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
+  font-style: italic;
 
   white-space: pre-wrap; }
 
