--- a/site/s2/style.css
+++ b/site/s2/style.css
@@ -153,7 +153,7 @@ span.amp {
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
 
-  font-size: 46pt;
+  font-size: 52pt;
   font-family: exo, sans-serif;
   font-weight: 200;
 
@@ -416,6 +416,10 @@ span.amp {
     url(http://subtlepatterns.subtlepatterns.netdna-cdn.com/patterns/shattered.png);
   background-attachment: fixed, fixed;
 }
+
+.section.more .heading h2 {
+  color: #70649a;
+  text-shadow: 0 1px 0 rgba(250, 250, 250, 0.8); }
 
 /* ---------------------------------------------------------------------------- */
 
