--- a/site/s2/style.css
+++ b/site/s2/style.css
@@ -1,5 +1,5 @@
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed,  figure, figcaption, footer, header, hgroup,  menu, nav, output, ruby, main-notes, summary, time, mark, audio, video { margin: 0; padding: 0; border: 0; font-size: 100%; font: inherit; vertical-align: baseline; }
-article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, main-notes { display: block; }
+article, aside, details, figcaptiaon, figure, footer, header, hgroup, menu, nav, main-notes { display: block; }
 body { line-height: 1; }
 ol, ul { list-style: none; }
 blockquote, q { quotes: none; }
@@ -275,13 +275,48 @@ span.amp {
   overflow: hidden;
   padding: 20px 20px 80px 20px; }
 
-@media (max-width: 600px) {
-  .section {
-    padding: 20px 10px; } }
-
 .section.top {
   box-shadow: none;
-  padding-top: 0; }
+  padding-top: 20px; }
+
+@media (max-width: 600px) {
+  .section {
+    padding: 20px 10px; }
+
+  .section.top {
+    padding-top: 0; } }
+
+.section.after-top {
+  box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0.1);
+  background: rgba(200, 80, 200, 0.1); }
+
+.section.top {
+  padding-bottom: 0; }
+
+.section .o-line {
+  position: relative;
+
+  background: rgba(100, 0, 50, 0.2);
+  width: 10px;
+  height: 100px;
+  margin: 0 auto;
+  margin-top: -20px; }
+
+.section.top .o-line {
+  left: 4px;
+
+  width: 10px;
+  background: rgba(30, 140, 200, 0.2);
+  box-shadow: -10px 0 0 rgba(30, 140, 200, 0.1);
+  height: 180px; }
+
+@media (max-width: 600px) {
+  .section.top .o-line,
+  .section .o-line {
+    opacity: 0;
+    height: 20px;
+    background: transparent;
+    box-shadow: none; } }
 
 /* ---------------------------------------------------------------------------- */
 
@@ -294,6 +329,7 @@ span.amp {
   box-shadow: inset 0 5px 3px -3px rgba(0, 0, 0, 0.3);
 
   padding-top: 60px;
+  padding-bottom: 0;
 
   border-top: solid 1px #aaa;
   border-bottom: solid 1px #aaa; }
@@ -345,7 +381,13 @@ span.amp {
 
 @media (min-width: 600px) {
   .section.usage pre.figure {
-    margin-right: -90px;
+    box-shadow: inset -8px 0 6px -6px rgba(0, 0, 0, 0.1), 0 1px 2px rgba(0, 0, 0, 0.1);
+    border-top-right-radius: 4px;
+
+    border-top-left-radius: 2px;
+    border-bottom-left-radius: 2px;
+
+    margin-right: -84px;
     margin-left: 30px;
     float: right; }
 
@@ -354,10 +396,10 @@ span.amp {
     display: block;
 
     position: absolute;
-    bottom: -20px;
+    bottom: -8px;
     right: -1px;
 
-    border: solid 10px transparent;
+    border: solid 4px transparent;
     border-top-color: #c0d3d3;
 
     width: 0;
@@ -882,7 +924,7 @@ span.amp {
 .gap .thing {
   background: #f0f0f0;
   border: solid 5px #f0f0f0;
-  color: #ddd;
+  color: #888;
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1); }
 
 .gap .thing:hover {
